--- a/generador_numeros/interfaz/ventana_generador_numeros.ui
+++ b/generador_numeros/interfaz/ventana_generador_numeros.ui
@@ -148,15 +148,6 @@
        </color>
       </brush>
      </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
     </active>
     <inactive>
      <colorrole role="WindowText">
@@ -288,15 +279,6 @@
      <colorrole role="ToolTipText">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
         <red>0</red>
         <green>0</green>
         <blue>0</blue>
@@ -440,15 +422,6 @@
        </color>
       </brush>
      </colorrole>
-     <colorrole role="PlaceholderText">
-      <brush brushstyle="SolidPattern">
-       <color alpha="128">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
-     </colorrole>
     </disabled>
    </palette>
   </property>
@@ -456,7 +429,7 @@
    <string>Generación de números aleatorios</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="interfaz/recursos/sim.qrc">
+   <iconset resource="recursos/sim.qrc">
     <normaloff>:/sim/sim.png</normaloff>:/sim/sim.png</iconset>
   </property>
   <property name="iconSize">
@@ -1113,7 +1086,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="interfaz/recursos/sim.qrc"/>
+  <include location="recursos/sim.qrc"/>
  </resources>
  <connections/>
 </ui>
