--- a/generador_numeros/interfaz/ventana_generador_numeros.ui
+++ b/generador_numeros/interfaz/ventana_generador_numeros.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>907</width>
-    <height>479</height>
+    <height>474</height>
    </rect>
   </property>
   <property name="palette">
@@ -142,6 +142,15 @@
      <colorrole role="ToolTipText">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
         <red>0</red>
         <green>0</green>
         <blue>0</blue>
@@ -285,6 +294,15 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
     </inactive>
     <disabled>
      <colorrole role="WindowText">
@@ -416,6 +434,15 @@
      <colorrole role="ToolTipText">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="PlaceholderText">
+      <brush brushstyle="NoBrush">
+       <color alpha="128">
         <red>0</red>
         <green>0</green>
         <blue>0</blue>
@@ -808,7 +835,7 @@
             <property name="sizeHint" stdset="0">
              <size>
               <width>0</width>
-              <height>15</height>
+              <height>20</height>
              </size>
             </property>
            </spacer>
@@ -857,6 +884,9 @@
               <property name="text">
                <string>Limpiar</string>
               </property>
+              <property name="autoDefault">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
             <item>
@@ -870,6 +900,9 @@
               <property name="text">
                <string>Generar números</string>
               </property>
+              <property name="autoDefault">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
            </layout>
@@ -879,7 +912,7 @@
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>15</height>
+              <height>20</height>
              </size>
             </property>
             <property name="orientation">
@@ -905,61 +938,6 @@
              <number>3</number>
             </property>
             <item>
-             <widget class="QLabel" name="lbl_alfa">
-              <property name="text">
-               <string>α</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="spacer_horizontal_7">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>0</width>
-                <height>0</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="txt_alfa">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>200</width>
-                <height>0</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="lyt_horizontal_3_8">
-            <property name="spacing">
-             <number>5</number>
-            </property>
-            <property name="leftMargin">
-             <number>5</number>
-            </property>
-            <property name="topMargin">
-             <number>3</number>
-            </property>
-            <property name="rightMargin">
-             <number>5</number>
-            </property>
-            <property name="bottomMargin">
-             <number>3</number>
-            </property>
-            <item>
              <widget class="QLabel" name="lbl_cantidad_intervalos">
               <property name="text">
                <string>Cantidad intervalos</string>
@@ -967,7 +945,7 @@
              </widget>
             </item>
             <item>
-             <spacer name="spacer_horizontal_8">
+             <spacer name="spacer_horizontal_7">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -1002,15 +980,15 @@
             <property name="sizeHint" stdset="0">
              <size>
               <width>0</width>
-              <height>15</height>
+              <height>20</height>
              </size>
             </property>
            </spacer>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="lyt_horizontal_3_9">
+           <layout class="QHBoxLayout" name="lyt_horizontal_3_8">
             <item>
-             <spacer name="spacer_horizontal_9">
+             <spacer name="spacer_horizontal_8">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -1033,6 +1011,9 @@
               <property name="text">
                <string>Limpiar</string>
               </property>
+              <property name="autoDefault">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
             <item>
@@ -1045,6 +1026,9 @@
               </property>
               <property name="text">
                <string>Prueba de frecuencia</string>
+              </property>
+              <property name="autoDefault">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
