--- a/tp2/toma_datos/interfaz/ventana_toma_datos.ui
+++ b/tp2/toma_datos/interfaz/ventana_toma_datos.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>637</width>
-    <height>437</height>
+    <height>483</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>637</width>
-    <height>437</height>
+    <height>483</height>
    </size>
   </property>
   <property name="palette">
@@ -824,8 +824,8 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>40</width>
-            <height>20</height>
+            <width>0</width>
+            <height>0</height>
            </size>
           </property>
          </spacer>
@@ -838,6 +838,55 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="minimumSize">
+           <size>
+            <width>180</width>
+            <height>0</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="lyt_horizontal_1_6">
+        <property name="spacing">
+         <number>5</number>
+        </property>
+        <property name="leftMargin">
+         <number>5</number>
+        </property>
+        <property name="topMargin">
+         <number>3</number>
+        </property>
+        <property name="rightMargin">
+         <number>5</number>
+        </property>
+        <property name="bottomMargin">
+         <number>3</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="lbl_tipo_distribucion">
+          <property name="text">
+           <string>Tipo de distribución</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="spacer_horizontal_6">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QComboBox" name="mb_tipo_distribucion">
           <property name="minimumSize">
            <size>
             <width>180</width>
@@ -865,7 +914,7 @@
        </spacer>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="lyt_horizontal_1_6">
+       <layout class="QHBoxLayout" name="lyt_horizontal_1_7">
         <property name="spacing">
          <number>5</number>
         </property>
@@ -882,7 +931,7 @@
          <number>3</number>
         </property>
         <item>
-         <spacer name="spacer_horizontal_6">
+         <spacer name="spacer_horizontal_7">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
