--- a/tp2/toma_datos/interfaz/ventana_toma_datos.ui
+++ b/tp2/toma_datos/interfaz/ventana_toma_datos.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>ventana_toma_datos</class>
  <widget class="QMainWindow" name="ventana_toma_datos">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>667</width>
+    <height>483</height>
+   </rect>
+  </property>
   <property name="minimumSize">
    <size>
     <width>667</width>
@@ -939,7 +947,7 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_generar_histograma">
+         <widget class="QPushButton" name="btn_generar_grafico">
           <property name="minimumSize">
            <size>
             <width>190</width>
@@ -947,7 +955,7 @@
            </size>
           </property>
           <property name="text">
-           <string>Generar histograma</string>
+           <string>Generar gráfico</string>
           </property>
           <property name="autoDefault">
            <bool>true</bool>
