--- a/tp3/generador_variables/interfaz/ventana_generador_variables.ui
+++ b/tp3/generador_variables/interfaz/ventana_generador_variables.ui
@@ -987,6 +987,9 @@
               <property name="text">
                <string>Generar gráfico</string>
               </property>
+              <property name="autoDefault">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
             <item>
