--- a/tp3/generador_variables/interfaz/ventana_generador_variables.ui
+++ b/tp3/generador_variables/interfaz/ventana_generador_variables.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>760</width>
-    <height>444</height>
+    <height>461</height>
    </rect>
   </property>
   <property name="palette">
@@ -918,6 +918,61 @@
            </layout>
           </item>
           <item>
+           <layout class="QHBoxLayout" name="lyt_horizontal_3_7">
+            <property name="spacing">
+             <number>5</number>
+            </property>
+            <property name="leftMargin">
+             <number>5</number>
+            </property>
+            <property name="topMargin">
+             <number>3</number>
+            </property>
+            <property name="rightMargin">
+             <number>5</number>
+            </property>
+            <property name="bottomMargin">
+             <number>3</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="txt_alpha">
+              <property name="text">
+               <string>alpha</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="spacer_horizontal_7">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QComboBox" name="cmb_alpha">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>200</width>
+                <height>0</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
            <spacer name="spacer_vertical_1">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -934,7 +989,7 @@
            </spacer>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="lyt_horizontal_3_7">
+           <layout class="QHBoxLayout" name="lyt_horizontal_3_8">
             <property name="spacing">
              <number>5</number>
             </property>
@@ -945,7 +1000,7 @@
              <number>3</number>
             </property>
             <item>
-             <spacer name="spacer_horizontal_7">
+             <spacer name="spacer_horizontal_8">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
